# global_auto_init

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: robot_config.yaml
include/auto_init/algorithms/: database_builder.hpp  fpfh_ransac.hpp  npy_loader.hpp  scan_context.hpp
include/auto_init/pipeline/: auto_init_pipeline.hpp
include/auto_init/ros/: ginit_robot.hpp
src/algorithms/: database_builder.cpp  fpfh_ransac.cpp  npy_loader.cpp  scan_context.cpp
src/pipeline/: auto_init_pipeline.cpp
src/ros/: ginit_node.cpp  ginit_robot.cpp
